--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">DameLasChapas</string>
+    <string name="app_name">Dame La Chapa</string>
+    <string name="background_description">Fondo de papel de arroz con diseño sumi-e</string>
+    <string name="daruma_description">Ilustración de Daruma en el menú principal</string>
+    <string name="play_button_text">JUGAR</string>
 </resources>
